# stewart-core

./: CMakeLists.txt  README.md
include/: AxisScaling.h  InverseKinematics.h  MotionCueing.h
src/: InverseKinematics.cpp  MotionCueing.cpp
tests/: CMakeLists.txt  test_motion_cueing_output.cpp
